compatiable with spark3.2 and scala 2.12.15 fix scala version match from m spark-submit --version

--- a/rsc/pom.xml
+++ b/rsc/pom.xml
@@ -68,16 +68,6 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-launcher_${scala.binary.version}</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.scalatest</groupId>
-          <artifactId>scalatest_${scala.binary.version}</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.spark</groupId>
-          <artifactId>spark-tags_${scala.binary.version}</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <!-- Needed by Spark but excluded in the Livy root pom. -->
@@ -157,7 +147,7 @@
               <relocations>
                 <relocation>
                   <pattern>com.esotericsoftware</pattern>
-                  <shadedPattern>org.apache.livy.shaded.kryo</shadedPattern>
+                  <shadedPattern>org.apache.livy.shaded.esotericsoftware</shadedPattern>
                 </relocation>
               </relocations>
             </configuration>
@@ -177,6 +167,10 @@
               <excludeArtifactIds>
                 livy-client-common,
                 kryo,
+                reflectasm,
+                minlog,
+                objenesis,
+                netty-all,
                 spark-launcher_${scala.binary.version},
               </excludeArtifactIds>
               <outputDirectory>${project.build.directory}/jars</outputDirectory>
