--- a/pom.xml
+++ b/pom.xml
@@ -724,6 +724,7 @@
           <configuration>
             <environmentVariables>
               <LIVY_TEST>true</LIVY_TEST>
+              <LC_ALL>C.UTF-8</LC_ALL>
               <SPARK_HOME>${spark.home}</SPARK_HOME>
               <LIVY_LOG_DIR>${livy.log.dir}</LIVY_LOG_DIR>
               <LIVY_SPARK_VERSION>${spark.version}</LIVY_SPARK_VERSION>
