--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,12 @@ install:
   - sudo apt-get update
   - sudo apt-get -qq --allow-unauthenticated install r-base
   - sudo apt-get -qq install python3-pip python-dev
-  - sudo apt-get -qq install libkrb5-dev
+  - sudo apt-get -qq install libkrb5-dev libffi-dev
   - sudo apt-get -qq remove python-setuptools
-  - sudo pip2 -q install --upgrade "pip < 10.0.0" "setuptools < 36"
-  - sudo python3 -m pip -q install --upgrade "pip < 10.0.0" "setuptools < 36"
+  - sudo apt-get -qq install python-pip
+  - sudo pip2 -q install setuptools
+  - sudo pip2 -q install --upgrade "pip < 10.0.0"
+  - sudo python3 -m pip -q install --upgrade pip
   - sudo pip2 -q install codecov cloudpickle
   - sudo python3 -m pip -q install cloudpickle
   - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
