--- a/.travis.yml
+++ b/.travis.yml
@@ -49,11 +49,13 @@ install:
   - sudo apt-get -qq install python-pip
   - sudo pip2 -q install setuptools
   - sudo pip2 -q install --upgrade "pip < 10.0.0"
-  - sudo python3 -m pip -q install --upgrade pip
+  - sudo python3 -m pip -q install --upgrade "pip < 10.0.0"
   - sudo pip2 -q install codecov cloudpickle
   - sudo python3 -m pip -q install cloudpickle
   - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
-  - sudo pip3 -q install "requests >= 2.10.0" pytest flaky requests-kerberos
+  - sudo pip3 -q install "requests >= 2.10.0" flaky 
+  - sudo python3 -m pip -q install --upgrade pip
+  - sudo pip3 -q install pytest requests-kerberos
 
 script:
   - mvn $MVN_FLAG -Dmaven.javadoc.skip=true -B -V -e verify
