--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ install:
   - sudo apt-get -qq install python-pip
   - sudo pip2 -q install setuptools
   - sudo pip2 -q install --upgrade "pip < 10.0.0"
+  - sudo python3 -m pip -q install setuptools
   - sudo python3 -m pip -q install --upgrade "pip < 10.0.0"
   - sudo pip2 -q install codecov cloudpickle
   - sudo python3 -m pip -q install cloudpickle
