--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,9 @@ install:
   - sudo apt-get -qq install libkrb5-dev
   - sudo apt-get -qq remove python-setuptools
   - sudo pip2 -q install --upgrade pip "setuptools < 36"
-  - sudo python3 -m pip -q install --upgrade pip "setuptools < 36"
+  - sudo pip3 -q install --upgrade pip "setuptools < 36"
   - sudo pip2 -q install codecov cloudpickle
-  - sudo python3 -m pip -q install cloudpickle
+  - sudo pip3 -q install cloudpickle
   - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
   - sudo pip3 -q install "requests >= 2.10.0" pytest flaky requests-kerberos
 
