fix more travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,11 +43,12 @@ install:
   - sudo add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu xenial-cran35/'
   - sudo apt-get update
   - sudo apt-get -qq --allow-unauthenticated install r-base
-  - sudo apt-get -qq install python3-pip python-dev
+  - sudo apt-get -qq install python-dev
   - sudo apt-get -qq install libkrb5-dev
   - sudo apt-get -qq remove python-setuptools
   - sudo pip2 -q install --upgrade pip "setuptools < 36"
-  - sudo pip3 -q install --upgrade pip "setuptools < 36"
+  - sudo curl -fsSL https://bootstrap.pypa.io/pip/3.5/get-pip.py | python3.5
+  - sudo pip3 -q install "setuptools < 36"
   - sudo pip2 -q install codecov cloudpickle
   - sudo pip3 -q install cloudpickle
   - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
