--- a/.travis.yml
+++ b/.travis.yml
@@ -48,11 +48,11 @@ install:
   - sudo apt-get -qq remove python-setuptools
   - sudo pip2 -q install --upgrade pip "setuptools < 36"
   - sudo curl -fsSL https://bootstrap.pypa.io/pip/3.5/get-pip.py | python3.5
-  - sudo pip3 -q install "setuptools < 36"
+  - sudo python3 -m pip -q install "setuptools < 36"
   - sudo pip2 -q install codecov cloudpickle
-  - sudo pip3 -q install cloudpickle
+  - sudo python3 -m pip -q install cloudpickle
   - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
-  - sudo pip3 -q install "requests >= 2.10.0" pytest flaky requests-kerberos
+  - sudo python3 -m pip -q install "requests >= 2.10.0" pytest flaky requests-kerberos
 
 script:
   - mvn $MVN_FLAG -Dmaven.javadoc.skip=true -B -V -e verify
