--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,7 @@ install:
   - sudo python3 -m pip -q install --upgrade "pip < 10.0.0" "setuptools < 36"
   - sudo pip2 -q install codecov cloudpickle
   - sudo python3 -m pip -q install cloudpickle
-  - sudo pip2 -q install "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
-  - sudo pip3 -q install "requests >= 2.10.0" pytest flaky requests-kerberos
+  - sudo pip2 -q install "requests >= 2.10.0" "responses >= 0.5.1" "futures>=3.0.5" "future>=0.15.2" pytest pytest-runner flaky flake8 requests-kerberos
 
 script:
   - mvn $MVN_FLAG -Dmaven.javadoc.skip=true -B -V -e verify
