--- a/rsc/pom.xml
+++ b/rsc/pom.xml
@@ -54,7 +54,7 @@
       <artifactId>livy-core_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
       <!-- Or it will conflict with repl jars -->
-      <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
