add support k8s, spark 3.3.0

--- a/livy/conf/livy.conf.template
+++ b/livy/conf/livy.conf.template
@@ -145,12 +145,12 @@
 # cause session leakage, so we need to check session leakage.
 # How long to check livy session leakage
 # livy.server.yarn.app-leakage.check-timeout = 600s
-# how often to check livy session leakage
+# How often to check livy session leakage
 # livy.server.yarn.app-leakage.check-interval = 60s
 
 # How often Livy polls YARN to refresh YARN app state.
 # livy.server.yarn.poll-interval = 5s
-#
+
 # If Livy can't find the Kubernetes app within this time, consider it lost
 # livy.server.kubernetes.app-lookup-timeout = 600s
 # When the cluster is busy, we may fail to launch Kubernetes app in app-lookup-timeout, then it
@@ -167,11 +167,17 @@
 # Comma-separated list of the Kubernetes namespaces to allow for applications creation.
 # All namespaces are allowed if empty
 # livy.server.kubernetes.allowedNamespaces =
+
 # Days to keep Livy server request logs.
 # livy.server.request-log-retain.days = 5
 
 # If the Livy Web UI should be included in the Livy Server. Enabled by default.
 # livy.ui.enabled = true
+# Whether to display on Livy UI links to Spark UI when running on Kubernetes
+# livy.ui.kubernetes.sparkui.enabled = false
+# String format to use to build links to Spark UI to be displayed on Livy UI when running on
+# Kubernetes. Use '%s' placeholder for the link url part to be replaced by Spark application ID
+# livy.ui.kubernetes.sparkui.link-format = http://localhost/%s
 
 # Whether to enable Livy server access control, if it is true then all the income requests will
 # be checked if the requested user has permission.
@@ -201,6 +207,7 @@
 # livy.server.auth.<custom>.class = <class of custom auth filter>
 # livy.server.auth.<custom>.param.<foo1> = <bar1>
 # livy.server.auth.<custom>.param.<foo2> = <bar2>
+
 # Manual authentication to KubeApiserver (by default configured with Kubernetes ServiceAccount
 # if deployed to Kubernetes cluster as a Pod)
 # Kubernetes oauth token file path
