--- a/pom.xml
+++ b/pom.xml
@@ -207,9 +207,9 @@
     <module>core</module>
     <module>core/scala-2.11</module>
     <module>core/scala-2.12</module>
-    <module>coverage</module>
-    <module>examples</module>
-    <module>python-api</module>
+    <!-- <module>coverage</module> -->
+    <!-- <module>examples</module> -->
+    <!-- <module>python-api</module> -->
     <module>repl</module>
     <module>repl/scala-2.11</module>
     <module>repl/scala-2.12</module>
@@ -220,7 +220,7 @@
     <module>scala-api/scala-2.12</module>
     <module>server</module>
     <module>test-lib</module>
-    <module>integration-test</module>
+    <!-- <module>integration-test</module> -->
   </modules>
 
   <dependencies>
@@ -1053,19 +1053,19 @@
       </modules>
     </profile>
 
-    <profile>
-      <id>spark-3.0</id>
+<profile>
+      <id>spark-3.3.0</id>
       <activation>
         <property>
-          <name>spark-3.0</name>
+          <name>spark-3.3.0</name>
         </property>
       </activation>
       <properties>
-        <spark.scala-2.12.version>3.0.0</spark.scala-2.12.version>
+        <spark.scala-2.13.version>3.3.0</spark.scala-2.13.version>
         <spark.scala-2.11.version>2.4.5</spark.scala-2.11.version>
         <spark.version>${spark.scala-2.11.version}</spark.version>
-        <netty.spark-2.12.version>4.1.86.Final</netty.spark-2.12.version>
-        <netty.spark-2.11.version>4.1.86.Final</netty.spark-2.11.version>
+        <netty.spark-2.12.version>4.1.47.Final</netty.spark-2.12.version>
+        <netty.spark-2.11.version>4.1.47.Final</netty.spark-2.11.version>
         <netty.version>${netty.spark-2.11.version}</netty.version>
         <java.version>1.8</java.version>
         <py4j.version>0.10.9</py4j.version>
@@ -1073,9 +1073,9 @@
         <json4s.spark-2.12.version>3.6.6</json4s.spark-2.12.version>
         <json4s.version>${json4s.spark-2.11.version}</json4s.version>
         <spark.bin.download.url>
-          https://archive.apache.org/dist/spark/spark-3.0.0/spark-3.0.0-bin-hadoop2.7.tgz
+          https://archive.apache.org/dist/spark/spark-3.3.0/spark-3.3.0-bin-hadoop3.tgz
         </spark.bin.download.url>
-        <spark.bin.name>spark-3.0.0-bin-hadoop2.7</spark.bin.name>
+        <spark.bin.name>spark-3.3.0-bin-hadoop3</spark.bin.name>
       </properties>
     </profile>
 
