--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,6 @@
     <mockito.version>1.10.19</mockito.version>
     <netty.version>4.1.86.Final</netty.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <py4j.version>0.10.7</py4j.version>
     <scalatest.version>3.0.8</scalatest.version>
     <scalatra.version>2.6.5</scalatra.version>
     <java.version>1.8</java.version>
@@ -728,7 +727,7 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
-          <version>4.2.0</version>
+          <version>4.3.0</version>
           <executions>
             <execution>
               <goals>
@@ -1151,7 +1150,7 @@
       <id>scala-2.12</id>
       <properties>
         <scala.binary.version>2.12</scala.binary.version>
-        <scala.version>2.12.10</scala.version>
+        <scala.version>2.12.15</scala.version>
       </properties>
     </profile>
 
@@ -1180,10 +1179,11 @@
     <profile>
       <id>spark3</id>
       <properties>
-        <spark.version>3.0.0</spark.version>
+        <spark.version>3.2.3</spark.version>
         <java.version>1.8</java.version>
-        <py4j.version>0.10.9</py4j.version>
-        <json4s.version>3.6.6</json4s.version>
+        <py4j.version>0.10.9.7</py4j.version>
+        <json4s.version>3.7.0-M11</json4s.version>
+        <netty.version>4.1.92.Final</netty.version>
         <spark.bin.name>spark-${spark.version}-bin-hadoop${hadoop.major-minor.version}</spark.bin.name>
         <spark.bin.download.url>
           https://archive.apache.org/dist/spark/spark-${spark.version}/${spark.bin.name}.tgz
