--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -62,7 +62,7 @@ RUN python3 -m pip install \
         "requests >= 2.10.0" \
         "responses >= 0.5.1"
 # Install spark
-RUN mkdir -p /opt/spark &&  mkdir -p /opt/livy \
+RUN mkdir -p /opt/spark &&  mkdir -p /opt/livy
 RUN curl -L -o /opt/spark.tgz http://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}.tgz && \
     tar -xvzf /opt/spark.tgz -C /opt/spark --strip-components 1
 RUN export SPARK_HOME=/opt/spark
