--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -73,7 +73,7 @@ RUN curl -L -o /opt/livy.zip https://dlcdn.apache.org/incubator/livy/${APACHE_LI
 RUN mv /opt/livy/apache-livy-${APACHE_LIVY}-incubating-bin /opt/livy/${APACHE_LIVY}
 
 COPY conf/livy.conf.template /opt/livy/${APACHE_LIVY}/conf/livy.conf
-COPY conf/livy-env.conf.template /opt/livy/${APACHE_LIVY}/conf/livy-env.conf
+COPY conf/livy-env.sh.conf.template /opt/livy/${APACHE_LIVY}/conf/livy-env.sh.conf
 COPY conf/spark-blacklist.conf.template /opt/livy/${APACHE_LIVY}/conf/spark-blacklist.conf
 COPY conf/livy-client.conf.template /opt/livy/${APACHE_LIVY}/conf/livy-client.conf
 COPY conf/log4j.properties.template /opt/livy/${APACHE_LIVY}/conf/log4j.properties
