--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -70,15 +70,15 @@ RUN export SPARK_HOME=/opt/spark
 RUN curl -L -o /opt/livy.zip https://dlcdn.apache.org/incubator/livy/${APACHE_LIVY}-incubating/apache-livy-${APACHE_LIVY}-incubating-bin.zip && \
     unzip  -d /opt/livy /opt/livy.zip
 
-RUN mv /opt/livy/apache-livy-${APACHE_LIVY}-incubating-bin /opt/livy/${APACHE_LIVY}
+RUN mv /opt/livy/apache-livy-${APACHE_LIVY}-incubating-bin /opt/livy/server
 
-COPY conf/livy.conf.template /opt/livy/${APACHE_LIVY}/conf/livy.conf
-COPY conf/livy-env.sh.template /opt/livy/${APACHE_LIVY}/conf/livy-env.sh
-COPY conf/spark-blacklist.conf.template /opt/livy/${APACHE_LIVY}/conf/spark-blacklist.conf
-COPY conf/livy-client.conf.template /opt/livy/${APACHE_LIVY}/conf/livy-client.conf
-COPY conf/log4j.properties.template /opt/livy/${APACHE_LIVY}/conf/log4j.properties
+COPY conf/livy.conf.template /opt/livy/server/conf/livy.conf
+COPY conf/livy-env.sh.template /opt/livy/server/conf/livy-env.sh
+COPY conf/spark-blacklist.conf.template /opt/livy/server/conf/spark-blacklist.conf
+COPY conf/livy-client.conf.template /opt/livy/server/conf/livy-client.conf
+COPY conf/log4j.properties.template /opt/livy/server/conf/log4j.properties
 
 # Install Livy
 WORKDIR /workspace
 # https://archive.apache.org/dist/spark/spark-2.4.5/spark-2.4.5-bin-hadoop2.7.tgz
-ENTRYPOINT ['/opt/livy/${APACHE_LIVY}/bin/livy-server', 'start']
+ENTRYPOINT ['/opt/livy/server/bin/livy-server', 'start']
